[gd_scene load_steps=22 format=3 uid="uid://t3vfn0oenp21"]

[ext_resource type="FontFile" uid="uid://du3421x6ajkbl" path="res://assets/fonts/digitalix.ttf" id="1"]
[ext_resource type="Texture2D" uid="uid://bmesuh2pdy8et" path="res://assets/images/dotline.png" id="2"]
[ext_resource type="PackedScene" uid="uid://bi4igf11y46mv" path="res://src/game/Player.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://bmi52i8c1lu0i" path="res://src/game/Opponent.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://balnue6mkld" path="res://src/game/Ball.tscn" id="5"]
[ext_resource type="Script" path="res://src/game/GameField.gd" id="6"]
[ext_resource type="Theme" uid="uid://cya5ponahvi3x" path="res://assets/PowerPong.tres" id="7"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(32, 1600)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(32, 1600)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(539, 256)

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(539, 256)

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="7"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="8"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="9"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="10"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="11"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Animation" id="12"]
resource_name = "and_game"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.501961, 0.501961, 0.501961, 0.501961), Color(0.501961, 0.501961, 0.501961, 0.501961)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Result:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="13"]
resource_name = "end_game"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Result:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end_game"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vakvj"]
_data = {
"and_game": SubResource("12"),
"end_game": SubResource("13")
}

[node name="GameField" type="Node"]
script = ExtResource("6")

[node name="BallTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="MatchTimer" type="Timer" parent="."]
wait_time = 29.0
one_shot = true

[node name="Field" type="Node" parent="."]

[node name="Background" type="ColorRect" parent="Field"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="Field/Background"]
position = Vector2(540, 960)
texture = ExtResource("2")

[node name="Wall" type="StaticBody2D" parent="Field"]

[node name="LeftWall" type="CollisionShape2D" parent="Field/Wall"]
position = Vector2(-32, 960)
shape = SubResource("1")

[node name="RightWall" type="CollisionShape2D" parent="Field/Wall"]
position = Vector2(1112, 960)
shape = SubResource("2")

[node name="OpponentGoal" type="Area2D" parent="Field"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/OpponentGoal"]
position = Vector2(540, -256)
shape = SubResource("3")

[node name="PlayerGoal" type="Area2D" parent="Field"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/PlayerGoal"]
position = Vector2(540, 2176)
shape = SubResource("4")

[node name="Interface" type="Node" parent="."]

[node name="OpponentName" type="Label" parent="Interface"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
theme_override_colors/font_color = Color(0.121569, 0.121569, 0.121569, 1)
theme_override_fonts/font = SubResource("5")
text = "Opponent"

[node name="OpponentScore" type="Label" parent="Interface"]
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = 800.0
offset_right = -252.0
offset_bottom = -31.9999
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("6")
text = "0"
uppercase = true

[node name="PlayerName" type="Label" parent="Interface"]
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_color = Color(0.121569, 0.121569, 0.121569, 1)
theme_override_fonts/font = SubResource("7")
text = "Player"

[node name="PlayerScore" type="Label" parent="Interface"]
anchors_preset = -1
anchor_top = 0.504
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 24.3201
offset_right = -252.0
offset_bottom = -800.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("8")
text = "0"

[node name="TimerLabel" type="Label" parent="Interface"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.03
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 252.0
offset_top = 742.4
offset_right = -32.0
offset_bottom = -32.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("9")
text = "90"

[node name="BallLabel" type="Label" parent="Interface"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.502
offset_top = 860.0
offset_bottom = -3.84003
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = SubResource("10")
text = "3"

[node name="ResultPanel" type="Panel" parent="Interface"]
visible = false
modulate = Color(0.501961, 0.501961, 0.501961, 0.501961)
self_modulate = Color(0.501961, 0.501961, 0.501961, 0.501961)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 0.00012207

[node name="Result" type="Label" parent="Interface"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("7")
theme_override_fonts/font = SubResource("11")
text = "YOU
WON"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Interface"]
libraries = {
"": SubResource("AnimationLibrary_vakvj")
}

[node name="Opponent" parent="." instance=ExtResource("4")]
position = Vector2(540, 48)

[node name="Player" parent="." instance=ExtResource("3")]
position = Vector2(540, 1872)

[node name="Ball" parent="." instance=ExtResource("5")]
position = Vector2(540, 960)

[connection signal="timeout" from="BallTimer" to="." method="_on_BallTimer_timeout"]
[connection signal="timeout" from="MatchTimer" to="." method="_on_MatchTimer_timeout"]
[connection signal="body_entered" from="Field/OpponentGoal" to="." method="_on_OpponentGoal_body_entered"]
[connection signal="body_entered" from="Field/PlayerGoal" to="." method="_on_PlayerGoal_body_entered"]
